# news-recommendation-llm

./: .envrc  .gitignore  LICENSE  README.md  pyproject.toml
dataset/: download_mind.py
src/config/: config.py
src/const/: env.py  path.py
src/evaluation/: RecEvaluator.py
src/experiment/: evaluate_bert.py  evaluate_random.py  train.py
src/mind/: MINDDataset.py  dataframe.py  download_mind.py
src/recommendation/nrms/: AdditiveAttention.py  NRMS.py  PLMBasedNewsEncoder.py  UserEncoder.py  __init__.py
src/utils/: list.py  logger.py  path.py  random_seed.py  slack.py  text.py
test/evaluation/: test_evaluation.py
test/mind/: test_MINDDataFrame.py
test/recommendation/nrms/: test_attention.py  test_encoder.py  test_nrms.py
